--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/graphiq/graphiq-search-plugin"
   },
-  "license": "ISC",
+  "license": "GPL-2.0",
   "devDependencies": {
     "css-loader": "^0.9.0",
     "gulp": "^3.8.10",
